View Issue Details

IDProjectCategoryView StatusLast Update
0033320Open CASCADEOCCT:Data Exchangepublic2023-03-24 15:39
Reportervro Assigned Tovro  
PrioritynormalSeveritycrash 
Status verifiedResolutionfixed 
PlatformWindowsOSVC++ 2019 
Product Version7.7.0 
Target Version7.7.1 
Summary0033320: Data Exchange - Reading of a VRML file with a long line fails
DescriptionIf a VRML file contains a long line, the reader fails.
Steps To Reproduceloadvrml s wM_BugBlender_2.wrl
TagsNo tags attached.
Test case numberde_mesh vrml_read A5

Relationships

related to 0030066 verifiedvglukhik Community Data Exchange - Fail to load VRML from ArcGIS 

Activities

git

2023-01-25 01:39

administrator   ~0112983

Branch CR33320 has been created by dpasukhi.

SHA-1: 3c7c705d776b15cf13c9416591bbede935446304


Detailed log of new commits:

Author: vro
Date: Tue Jan 24 09:48:33 2023 +0000

    0033320: Data Exchange - Reading of a VRML file with a long line fails
    
    Implement rolling back input stream to split on possible logical parts by comma or space.

dpasukhi

2023-01-25 19:21

developer   ~0112988

Dear vro,
please review OCCT - CR33320.

No regressions:
http://jenkins-test-10.nnov.opencascade.com/view/CR33320-master-dpasukhi/view/COMPARE/
Some tests are failed for technical reasons (problem with Jenkins)

I update your branch CR11111_vro with few remarks.
New test case was created to check stability

vro

2023-01-25 22:54

developer   ~0112989

Dear Bugmaster!

Successfully reviewed!
Put please the branch into master:
- OCCT: CR33320
- Products: no changes

Also, I temporary created a branch CR11111_vro. Could you please delete it? Thanks in advance :-)

git

2023-01-30 00:41

administrator   ~0113011

Branch CR33320 has been deleted by mnt.

SHA-1: 3c7c705d776b15cf13c9416591bbede935446304

Related Changesets

occt: master 3c7c705d

2023-01-24 12:48:33

vro


Committer: dpasukhi Details Diff
0033320: Data Exchange - Reading of a VRML file with a long line fails

Implement rolling back input stream to split on possible logical parts by comma or space.
Affected Issues
0033320
mod - src/VrmlData/VrmlData_Scene.cxx Diff File
add - tests/de_mesh/vrml_read/A5 Diff File

Issue History

Date Modified Username Field Change
2023-01-24 21:19 vro New Issue
2023-01-24 21:19 vro Assigned To => dpasukhi
2023-01-24 21:21 dpasukhi Summary Reading of a VRML file with a long line fails => Data Exchange - Reading of a VRML file with a long line fails
2023-01-24 21:21 dpasukhi Status new => assigned
2023-01-25 01:39 git Note Added: 0112983
2023-01-25 19:21 dpasukhi Assigned To dpasukhi => vro
2023-01-25 19:21 dpasukhi Status assigned => resolved
2023-01-25 19:21 dpasukhi Note Added: 0112988
2023-01-25 19:21 dpasukhi Test case number => de_mesh vrml_read A5
2023-01-25 22:54 vro Assigned To vro => bugmaster
2023-01-25 22:54 vro Status resolved => reviewed
2023-01-25 22:54 vro Note Added: 0112989
2023-01-30 00:25 dpasukhi Changeset attached => occt master 3c7c705d
2023-01-30 00:25 vro Assigned To bugmaster => vro
2023-01-30 00:25 vro Status reviewed => verified
2023-01-30 00:25 vro Resolution open => fixed
2023-01-30 00:41 git Note Added: 0113011
2023-03-24 15:39 dpasukhi Relationship added related to 0030066