0033320: Data Exchange - Reading of a VRML file with a long line fails

Implement rolling back input stream to split on possible logical parts by comma or space.